[GTK] Finetune captions menu as per design team https://bugs.webkit.org/show_bug.cgi?id=129432
Reviewed by Eric Carlson.

Some design fine tuning of the captions dialog was required.

No new tests, current suffice.

* Modules/mediacontrols/mediaControlsApple.js:
Added out class.
* Modules/mediacontrols/mediaControlsGtk.js:
(ControllerGtk.prototype.buildCaptionMenu): Setting out class when
menu is going to show overlap the panel right border.
* css/mediaControlsGtk.css:
(video::-webkit-media-controls-closed-captions-container.out):
Setting all borders to 5px;
(video::-webkit-media-controls-closed-captions-container h3):
Reduced font size and increasing top padding.
(video::-webkit-media-controls-closed-captions-container ul):
Increased top padding.


Canonical link: https://commits.webkit.org/147544@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@164857 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/Source/WebCore/css/mediaControlsGtk.css
+++ b/Source/WebCore/css/mediaControlsGtk.css
@@ -308,15 +308,24 @@ video::-webkit-media-controls-closed-captions-container {
     transition: height 0.10s linear;
 }
 
+video::-webkit-media-controls-closed-captions-container.out {
+    border-radius: 5px;
+}
+
 video::-webkit-media-controls-closed-captions-container h3 {
-    margin: 1px 10px;
-    padding-top: 4px;
+    padding-top: 8px;
+    margin: 0;
+    padding-left: 17px;
+    padding-right: 15px;
+    font-size: 10pt;
+    font-weight: bold;
+    font-style: normal;
 }
 
 video::-webkit-media-controls-closed-captions-container ul {
     list-style-type: none;
     margin: 0 0 4px 0;
-    padding: 0;
+    padding: 4px 0 0 0;
 }
 
 video::-webkit-media-controls-closed-captions-container li {
